--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,11 @@
     "require": {
         "php": ">=8.1",
         "vlucas/phpdotenv": "^5.0"
+    }, 
+    "require-dev": {
+        "phpunit/phpunit": "^10"
+    },
+    "scripts": {
+        "test": "phpunit --configuration phpunit.xml"
     }
 }
