--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "smartgoblin/library",
+    "name": "smart-goblin/library",
     "description": "Lightweight, fast and minimalistic PHP framework for monolithic apps.",
     "type": "library",
     "license": "MIT",
