--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,11 @@
         "php": "^8.5",
         "vlucas/phpdotenv": "^5.0"
     }, 
+    "autoload-dev": {
+        "psr-4": {
+            "FastRaven\\Tests\\": "tests/"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "^10"
     },
