add(Mail): MailWorker for sending crafted and dynamic emails. ntsh(): Moved Internal template folder.

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     },
     "require": {
         "php": "^8.4",
-        "vlucas/phpdotenv": "^5.0"
+        "vlucas/phpdotenv": "^5.0",
+        "phpmailer/phpmailer": "^7.0"
     }, 
     "autoload-dev": {
         "psr-4": {
